[tool.poetry]
name = "5"
version = "05"
description = ""
authors = ["d2d"]

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.dev-dependencies]
boto3 = "~1.34.42"
pylint = "~3.0.2"
pytest = "~7.4.3"
pytest-cov = "~4.1.0"
snowflake-connector-python = "~3.1.0"
flake8 = "~6.1.0"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "broad-except"
]

[tool.pylint.similarities]
ignore-imports = "yes"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
